--- a/index.html
+++ b/index.html
@@ -7,6 +7,32 @@
 </head>
 <body>
 <h1>STEFANY DIAS DA CUNHA</h1>
+<h2>Dados Pessoais</h2>
+<p> Telefone: 71 984652438</p>
+<p>email: stefannydias10@gmail.com</p>
+<h2>Formação Acadêmica</h2>
+<p>Ensino médio completo - Colégio Acadêmico (2019)</p>
+<h2>Experiência Profissional</h2>
+<h3>MRV Engenharia e Particpações - Aprendiz (2021- 2022)</h3>
+<p>Realização de compras através de cotações utilizando o SAP MM; follow up de pedidos de compras; gestão de contratos; acompanhamento de pagamentos de 
+    notas fiscais;<br> acompanhamento e atendimento de clientes internos através de plataforma 
+    integrada; prospecção e cadastro de fornecedor</p>
+    <h2>Formação complementar</h2>
+<ul>
+    <li>Pacote office - rede cidadã (2021)</li>
+    <li>Auxiliar Administrativo - Rede Cidadã (2021-2022)</li>
+</ul>
+<h2>Idiomas</h2>
+<ul>
+    <li>Inglês Intermediário - Uptime (2019-2021)</li>
+    <li>Espanhol Básico - IFRS (2022)</li>
+</ul>
+<h2>Habilidades</h2>
+<ul>
+    <li>Boa comunicação</li>
+    <li>Trabalho em equipe</li>
+    <li>Proativa</li>
+</ul>
 
 </body>
 </html>
